--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ form input {
   text-transform: uppercase;
   cursor: pointer;
   border-radius: 4px;
+  margin-right: 10px;
 }
 
 .btn:hover {
@@ -101,7 +102,8 @@ form input {
   margin-right: 15px;
 }
 
-.song-list li span {
+.song-list li span,
+.song-list li button {
   background: #fff;
   color: #222;
   padding: 10px 20px;
@@ -109,7 +111,8 @@ form input {
   cursor: pointer;
 }
 
-.song-list li span:hover {
+.song-list li span:hover,
+.song-list li button:hover {
   background: #d9d9d9;
 }
 
