--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body {
 
 h1 {
   margin-bottom: 20px;
-  font-size: 1.5em;
+  font-size: 2em;
   color: #fff;
 }
 
 h2 {
   margin-bottom: 10px;
-  font-size: 1.2em;
+  font-size: 1.5em;
   color: #444;
 }
 
@@ -39,10 +39,11 @@ h2 {
   padding: 20px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0 8px 36px rgb(67 67 67 / 6%);
+  box-shadow: 0 8px 36px rgba(67, 67, 67, 0.06);
   border-radius: 10px;
   background: #fff;
   width: 100%;
+  margin-bottom: 20px;
 }
 
 .box-bg {
