--- a/style.css
+++ b/style.css
@@ -92,12 +92,12 @@ body {
 
 .spinner {
   border: 4px solid rgba(0, 0, 0, 0.1);
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
   border-left-color: #4caf50;
-  animation: spin 1s ease infinite;
-  margin: 20px auto;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
+  margin: 50px auto;
 }
 
 @keyframes spin {
@@ -109,11 +109,14 @@ body {
   }
 }
 
-.lyrics-container {
-  background-color: #f9f9f9;
-  padding: 15px;
-  border-radius: 5px;
+#saved-lyrics-list {
   margin-top: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+#saved-lyrics-list li {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
